--- a/ecommerceTSXClass/index.html
+++ b/ecommerceTSXClass/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    
     <title>Vite + React + TS</title>
   </head>
   <body>
@@ -14,4 +15,6 @@
 <script src="https://unpkg.com/primereact/core/core.min.js"></script>
 <script src="https://unpkg.com/primereact/menubar/menubar.min.js"></script>
 <script src="https://unpkg.com/primereact/primereact.all.min.js"></script>
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.includes"></script>
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </html>
